// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`profile actions async : updateAvatar snapshot 1`] = `
Object {
  "payload": Object {
    "avatar": "TEST_AVATAR",
    "firstName": "Walter",
    "id": "TEST_ID",
    "lastName": "White",
    "token": "TEST_TOKEN",
  },
  "type": "UPDATE_AVATAR_ASYNC",
}
`;

exports[`profile actions async : updateNameAsync snapshot 1`] = `
Object {
  "payload": Object {
    "avatar": "TEST_AVATAR",
    "firstName": "Walter",
    "id": "TEST_ID",
    "lastName": "White",
    "token": "TEST_TOKEN",
  },
  "type": "UPDATE_NAME_ASYNC",
}
`;

exports[`profile actions async : updatePasswordAsync snapshot 1`] = `
Object {
  "payload": Object {
    "avatar": "TEST_AVATAR",
    "firstName": "Walter",
    "id": "TEST_ID",
    "lastName": "White",
    "token": "TEST_TOKEN",
  },
  "type": "UPDATE_PASSWORD_ASYNC",
}
`;
